--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -25,13 +25,14 @@
   "services": {
     "label": "Services",
     "title": "Notre Expertise",
+    "flipHint": "Survolez pour retourner",
     "items": {
-      "creation": { "title": "Création de Site Web", "description": "Sites web sur mesure conçus pour convertir vos visiteurs en clients.", "price": "À partir de 399$" },
-      "ecommerce": { "title": "E-Commerce", "description": "Boutiques en ligne complètes avec paiements et gestion des stocks.", "price": "À partir de 999$" },
-      "maintenance": { "title": "Maintenance", "description": "Gardez votre site sécurisé, rapide et toujours à jour.", "price": "À partir de 99$/mois" },
-      "seo": { "title": "SEO & Croissance", "description": "Soyez mieux classé sur Google. Obtenez plus de trafic organique.", "price": "À partir de 149$/mois" },
-      "branding": { "title": "Branding", "description": "Logo, identité visuelle et charte graphique qui se démarquent.", "price": "Devis personnalisé" },
-      "automation": { "title": "Automatisation & IA", "description": "Chatbots, workflows et outils IA pour scaler votre business.", "price": "Devis personnalisé" }
+      "creation": { "title": "Création de Site Web", "description": "Sites web sur mesure conçus pour convertir vos visiteurs en clients.", "price": "À partir de 399$", "details": ["Design responsive", "Optimisé SEO", "Chargement rapide", "CMS inclus", "Suivi analytics"] },
+      "ecommerce": { "title": "E-Commerce", "description": "Boutiques en ligne complètes avec paiements et gestion des stocks.", "price": "À partir de 999$", "details": ["Traitement des paiements", "Gestion des stocks", "Optimisé mobile", "Variantes de produits", "Notifications commandes"] },
+      "maintenance": { "title": "Maintenance", "description": "Gardez votre site sécurisé, rapide et toujours à jour.", "price": "À partir de 99$/mois", "details": ["Monitoring 24/7", "Sauvegardes quotidiennes", "Correctifs sécurité", "Optimisation performance", "Support prioritaire"] },
+      "seo": { "title": "SEO & Croissance", "description": "Soyez mieux classé sur Google. Obtenez plus de trafic organique.", "price": "À partir de 149$/mois", "details": ["Recherche de mots-clés", "Optimisation on-page", "Stratégie contenu", "Construction liens", "Rapports mensuels"] },
+      "branding": { "title": "Branding", "description": "Logo, identité visuelle et charte graphique qui se démarquent.", "price": "Devis personnalisé", "details": ["Design logo", "Palette de couleurs", "Sélection typographie", "Charte graphique", "Matériel imprimé"] },
+      "automation": { "title": "Automatisation & IA", "description": "Chatbots, workflows et outils IA pour scaler votre business.", "price": "Devis personnalisé", "details": ["Automatisation workflows", "Chatbots IA", "Intégration CRM", "Traitement données", "Solutions sur mesure"] }
     },
     "details": {
       "benefitsTitle": "Pourquoi nous choisir ?",
@@ -259,6 +260,8 @@
     "label": "Tarifs",
     "title": "Prix Transparents",
     "paymentTerms": "Conditions de paiement : 50% à la commande — 50% à la livraison",
+    "flipHint": "Survolez pour retourner",
+    "flipBack": "Survolez pour revenir",
     "common": {
       "popular": "POPULAIRE",
       "included": "Inclus :",
